--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
